src/objects/QPMS__CSMS_Standard_Criteria__c.object
<CustomObject>
    <description>CSMS Standard Criteria</description>
    <fields>
        <fullName>QPMS__CSMS_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSMS Standard</label>
        <referenceTo>QPMS__CSMS_Standard__c</referenceTo>
        <relationshipLabel>CSMS Standard Criterias</relationshipLabel>
        <relationshipName>CSMS_Standard_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Type__c</fullName>
        <label>Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Criteria</description>
        <inlineHelpText>Criteria</inlineHelpText>
        <label>Criteria</label>
        <referenceTo>QPMS__Criteria__c</referenceTo>
        <relationshipLabel>CSMS Standard Criterias</relationshipLabel>
        <relationshipName>CSMS_Standard_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Minus__c</fullName>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Plus__c</fullName>
        <label>Tolerance(+)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSMS Standard Criteria</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCN-{0000}</displayFormat>
        <label>CSMS Standard Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSMS Standard Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>